--- a/Day_1/cifar10_tutorial.ipynb
+++ b/Day_1/cifar10_tutorial.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a target=\"_blank\" href=\"https://colab.research.google.com/github/ramzan-basheer/MG_Univ_Wrkshp/blob/main/Day_1/cifar10_tutorial.ipynb\">\n",
+    "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+    "</a>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -8,8 +17,7 @@
    },
    "outputs": [],
    "source": [
-    "# For tips on running notebooks in Google Colab, see\n",
-    "# https://pytorch.org/tutorials/beginner/colab\n",
+    "\n",
     "%matplotlib inline"
    ]
   },
