--- a/Day_1/neural_networks_tutorial.ipynb
+++ b/Day_1/neural_networks_tutorial.ipynb
@@ -1,16 +1,12 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "# For tips on running notebooks in Google Colab, see\n",
-    "# https://pytorch.org/tutorials/beginner/colab\n",
-    "%matplotlib inline"
+    "<a target=\"_blank\" href=\"https://colab.research.google.com/github/ramzan-basheer/Graph-Neural-Networks/blob/master/neural_networks_tutorial.ipynb\">\n",
+    "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+    "</a>"
    ]
   },
   {
@@ -70,39 +66,39 @@
     "        super(Net, self).__init__()\n",
     "        # 1 input image channel, 6 output channels, 5x5 square convolution\n",
     "        # kernel\n",
-    "        self.conv1 = nn.Conv2d(1, 6, 5)\n",
-    "        self.conv2 = nn.Conv2d(6, 16, 5)\n",
+    "        self.conv1 = nn.Conv2d()\n",
+    "        self.conv2 = nn.Conv2d()\n",
     "        # an affine operation: y = Wx + b\n",
-    "        self.fc1 = nn.Linear(16 * 5 * 5, 120)  # 5*5 from image dimension \n",
-    "        self.fc2 = nn.Linear(120, 84)\n",
-    "        self.fc3 = nn.Linear(84, 10)\n",
+    "        self.fc1 = nn.Linear()  # 5*5 from image dimension \n",
+    "        self.fc2 = nn.Linear()\n",
+    "        self.fc3 = nn.Linear()\n",
     "\n",
     "    def forward(self, input):\n",
     "        # Convolution layer C1: 1 input image channel, 6 output channels,\n",
     "        # 5x5 square convolution, it uses RELU activation function, and\n",
     "        # outputs a Tensor with size (N, 6, 28, 28), where N is the size of the batch\n",
-    "        c1 = F.relu(self.conv1(input))\n",
+    "        c1 = \n",
     "        # Subsampling layer S2: 2x2 grid, purely functional,\n",
     "        # this layer does not have any parameter, and outputs a (N, 6, 14, 14) Tensor\n",
-    "        s2 = F.max_pool2d(c1, (2, 2))\n",
+    "        s2 = \n",
     "        # Convolution layer C3: 6 input channels, 16 output channels,\n",
     "        # 5x5 square convolution, it uses RELU activation function, and\n",
     "        # outputs a (N, 16, 10, 10) Tensor\n",
-    "        c3 = F.relu(self.conv2(s2))\n",
+    "        c3 = \n",
     "        # Subsampling layer S4: 2x2 grid, purely functional,\n",
     "        # this layer does not have any parameter, and outputs a (N, 16, 5, 5) Tensor\n",
-    "        s4 = F.max_pool2d(c3, 2)\n",
+    "        s4 = \n",
     "        # Flatten operation: purely functional, outputs a (N, 400) Tensor\n",
-    "        s4 = torch.flatten(s4, 1)\n",
+    "        s4 = \n",
     "        # Fully connected layer F5: (N, 400) Tensor input,\n",
     "        # and outputs a (N, 120) Tensor, it uses RELU activation function\n",
-    "        f5 = F.relu(self.fc1(s4))\n",
+    "        f5 = \n",
     "        # Fully connected layer F6: (N, 120) Tensor input,\n",
     "        # and outputs a (N, 84) Tensor, it uses RELU activation function\n",
-    "        f6 = F.relu(self.fc2(f5))\n",
+    "        f6 = \n",
     "        # Gaussian layer OUTPUT: (N, 84) Tensor input, and\n",
     "        # outputs a (N, 10) Tensor\n",
-    "        output = self.fc3(f6)\n",
+    "        output = \n",
     "        return output\n",
     "\n",
     "\n",
@@ -129,11 +125,7 @@
     "collapsed": false
    },
    "outputs": [],
-   "source": [
-    "params = list(net.parameters())\n",
-    "print(len(params))\n",
-    "print(params[0].size())  # conv1's .weight"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -172,10 +164,7 @@
     "collapsed": false
    },
    "outputs": [],
-   "source": [
-    "net.zero_grad()\n",
-    "out.backward(torch.randn(1, 10))"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -240,13 +229,7 @@
    },
    "outputs": [],
    "source": [
-    "output = net(input)\n",
-    "target = torch.randn(10)  # a dummy target, for example\n",
-    "target = target.view(1, -1)  # make it the same shape as output\n",
-    "criterion = nn.MSELoss()\n",
-    "\n",
-    "loss = criterion(output, target)\n",
-    "print(loss)"
+    "output = net(input)\n"
    ]
   },
   {
