--- a/Day_2/Introduction-Graph Neural Networks.ipynb
+++ b/Day_2/Introduction-Graph Neural Networks.ipynb
@@ -4,11 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-<<<<<<< HEAD
-    "<a target=\"_blank\" href=\"https://github.com/ramzan-basheer/Graph-Neural-Networks/blob/master/Introduction-Graph%20Neural%20Networks.ipynb\">\n",
-=======
     "<a target=\"_blank\" href=\"https://colab.research.google.com/github/ramzan-basheer/Graph-Neural-Networks/blob/master/Introduction-Graph Neural Networks.ipynb\">\n",
->>>>>>> 0901e70e25741f3535236e65f7a3b980edb88098
     "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
     "</a>"
    ]
@@ -26,18 +22,13 @@
    ]
   },
   {
-<<<<<<< HEAD
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import os"
-   ]
+   "source": []
   },
   {
-=======
->>>>>>> 0901e70e25741f3535236e65f7a3b980edb88098
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -49,19 +40,10 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torch"
-   ]
-=======
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
->>>>>>> 0901e70e25741f3535236e65f7a3b980edb88098
   },
   {
    "attachments": {},
@@ -75,8 +57,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -87,16 +68,7 @@
      ]
     }
    ],
-   "source": [
-    "os.environ['TORCH'] = torch.__version__\n",
-    "print(torch.__version__)"
-   ]
-=======
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": []
->>>>>>> 0901e70e25741f3535236e65f7a3b980edb88098
   },
   {
    "attachments": {},
@@ -112,24 +84,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-=======
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.13.1+cu117\n"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
->>>>>>> 0901e70e25741f3535236e65f7a3b980edb88098
    "execution_count": 44,
    "metadata": {},
    "outputs": [
@@ -239,18 +193,13 @@
    ]
   },
   {
-<<<<<<< HEAD
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import networkx as nx"
-   ]
+   "source": []
   },
   {
-=======
->>>>>>> 0901e70e25741f3535236e65f7a3b980edb88098
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -264,19 +213,10 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt"
-   ]
-=======
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
->>>>>>> 0901e70e25741f3535236e65f7a3b980edb88098
   },
   {
    "attachments": {},
@@ -292,7 +232,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 50,
    "metadata": {},
    "outputs": [],
@@ -305,12 +244,6 @@
     "                     node_color=color, cmap=\"Set2\")\n",
     "    plt.show()"
    ]
-=======
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
->>>>>>> 0901e70e25741f3535236e65f7a3b980edb88098
   },
   {
    "attachments": {},
@@ -332,7 +265,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 51,
    "metadata": {},
    "outputs": [],
@@ -347,12 +279,6 @@
     "        plt.xlabel(f'Epoch: {epoch}, Loss: {loss.item():.4f}', fontsize=16)\n",
     "    plt.show()"
    ]
-=======
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
->>>>>>> 0901e70e25741f3535236e65f7a3b980edb88098
   },
   {
    "attachments": {},
@@ -375,16 +301,6 @@
    ]
   },
   {
-<<<<<<< HEAD
-=======
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
->>>>>>> 0901e70e25741f3535236e65f7a3b980edb88098
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -411,19 +327,10 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from torch_geometric.datasets import KarateClub"
-   ]
-=======
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
->>>>>>> 0901e70e25741f3535236e65f7a3b980edb88098
   },
   {
    "attachments": {},
@@ -441,11 +348,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 53,
-=======
    "execution_count": null,
->>>>>>> 0901e70e25741f3535236e65f7a3b980edb88098
    "metadata": {},
    "outputs": [
     {
@@ -460,18 +363,7 @@
      ]
     }
    ],
-<<<<<<< HEAD
-   "source": [
-    "dataset = KarateClub()\n",
-    "print(f'Dataset: {dataset}:')\n",
-    "print('======================')\n",
-    "print(f'Number of graphs: {len(dataset)}')\n",
-    "print(f'Number of features: {dataset.num_features}')\n",
-    "print(f'Number of classes: {dataset.num_classes}')"
-   ]
-=======
    "source": []
->>>>>>> 0901e70e25741f3535236e65f7a3b980edb88098
   },
   {
    "attachments": {},
@@ -495,11 +387,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 54,
-=======
    "execution_count": null,
->>>>>>> 0901e70e25741f3535236e65f7a3b980edb88098
    "metadata": {},
    "outputs": [
     {
@@ -519,26 +407,7 @@
      ]
     }
    ],
-<<<<<<< HEAD
-   "source": [
-    "data = dataset[0]  # Get the first graph object.\n",
-    "\n",
-    "print(data)\n",
-    "print('==============================================================')\n",
-    "\n",
-    "# Gather some statistics about the graph.\n",
-    "print(f'Number of nodes: {data.num_nodes}')\n",
-    "print(f'Number of edges: {data.num_edges}')\n",
-    "print(f'Average node degree: {data.num_edges / data.num_nodes:.2f}')\n",
-    "print(f'Number of training nodes: {data.train_mask.sum()}')\n",
-    "print(f'Training node label rate: {int(data.train_mask.sum()) / data.num_nodes:.2f}')\n",
-    "print(f'Has isolated nodes: {data.has_isolated_nodes()}')\n",
-    "print(f'Has self-loops: {data.has_self_loops()}')\n",
-    "print(f'Is undirected: {data.is_undirected()}')"
-   ]
-=======
    "source": []
->>>>>>> 0901e70e25741f3535236e65f7a3b980edb88098
   },
   {
    "attachments": {},
@@ -564,11 +433,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 55,
-=======
    "execution_count": null,
->>>>>>> 0901e70e25741f3535236e65f7a3b980edb88098
    "metadata": {},
    "outputs": [
     {
@@ -734,14 +599,7 @@
      ]
     }
    ],
-<<<<<<< HEAD
-   "source": [
-    "edge_index = data.edge_index\n",
-    "print(edge_index.t())"
-   ]
-=======
    "source": []
->>>>>>> 0901e70e25741f3535236e65f7a3b980edb88098
   },
   {
    "attachments": {},
@@ -761,19 +619,12 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
     "from torch_geometric.utils import to_networkx"
    ]
-=======
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
->>>>>>> 0901e70e25741f3535236e65f7a3b980edb88098
   },
   {
    "attachments": {},
@@ -789,11 +640,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 57,
-=======
-   "execution_count": null,
->>>>>>> 0901e70e25741f3535236e65f7a3b980edb88098
    "metadata": {},
    "outputs": [
     {
@@ -807,14 +654,10 @@
      "output_type": "display_data"
     }
    ],
-<<<<<<< HEAD
    "source": [
     "G = to_networkx(data, to_undirected=True)\n",
     "visualize_graph(G, color=data.y)"
    ]
-=======
-   "source": []
->>>>>>> 0901e70e25741f3535236e65f7a3b980edb88098
   },
   {
    "attachments": {},
@@ -854,19 +697,12 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
     "from torch.nn import Linear"
    ]
-=======
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
->>>>>>> 0901e70e25741f3535236e65f7a3b980edb88098
   },
   {
    "attachments": {},
@@ -882,19 +718,12 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
     "from torch_geometric.nn import GCNConv"
    ]
-=======
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
->>>>>>> 0901e70e25741f3535236e65f7a3b980edb88098
   },
   {
    "attachments": {},
@@ -910,8 +739,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -919,17 +747,17 @@
     "    def __init__(self):\n",
     "        super().__init__()\n",
     "        torch.manual_seed(1234)\n",
-    "        self.conv1 = GCNConv(dataset.num_features, 4)\n",
-    "        self.conv2 = GCNConv(4, 4)\n",
-    "        self.conv3 = GCNConv(4, 2)\n",
-    "        self.classifier = Linear(2, dataset.num_classes)\n",
+    "        self.conv1 = \n",
+    "        self.conv2 = \n",
+    "        self.conv3 = \n",
+    "        self.classifier = \n",
     "\n",
     "    def forward(self, x, edge_index):\n",
-    "        h = self.conv1(x, edge_index)\n",
+    "        h = self.conv1()\n",
     "        h = h.tanh()\n",
-    "        h = self.conv2(h, edge_index)\n",
+    "        h = self.conv2()\n",
     "        h = h.tanh()\n",
-    "        h = self.conv3(h, edge_index)\n",
+    "        h = self.conv3()\n",
     "        h = h.tanh()  # Final GNN embedding space.\n",
     "        \n",
     "        # Apply a final (linear) classifier.\n",
@@ -937,12 +765,6 @@
     "\n",
     "        return out, h"
    ]
-=======
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
->>>>>>> 0901e70e25741f3535236e65f7a3b980edb88098
   },
   {
    "attachments": {},
@@ -960,11 +782,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 61,
-=======
-   "execution_count": null,
->>>>>>> 0901e70e25741f3535236e65f7a3b980edb88098
    "metadata": {},
    "outputs": [
     {
@@ -980,14 +798,10 @@
      ]
     }
    ],
-<<<<<<< HEAD
    "source": [
     "model = GCN()\n",
     "print(model)"
    ]
-=======
-   "source": []
->>>>>>> 0901e70e25741f3535236e65f7a3b980edb88098
   },
   {
    "attachments": {},
@@ -1026,19 +840,12 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
     "model = GCN()"
    ]
-=======
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
->>>>>>> 0901e70e25741f3535236e65f7a3b980edb88098
   },
   {
    "attachments": {},
@@ -1050,11 +857,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 63,
-=======
-   "execution_count": null,
->>>>>>> 0901e70e25741f3535236e65f7a3b980edb88098
    "metadata": {},
    "outputs": [
     {
@@ -1065,14 +868,10 @@
      ]
     }
    ],
-<<<<<<< HEAD
    "source": [
     "_, h = model(data.x, data.edge_index)\n",
     "print(f'Embedding shape: {list(h.shape)}')"
    ]
-=======
-   "source": []
->>>>>>> 0901e70e25741f3535236e65f7a3b980edb88098
   },
   {
    "attachments": {},
@@ -1084,11 +883,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 64,
-=======
-   "execution_count": null,
->>>>>>> 0901e70e25741f3535236e65f7a3b980edb88098
    "metadata": {},
    "outputs": [
     {
@@ -1102,13 +897,9 @@
      "output_type": "display_data"
     }
    ],
-<<<<<<< HEAD
    "source": [
     "visualize_embedding(h, color=data.y)"
    ]
-=======
-   "source": []
->>>>>>> 0901e70e25741f3535236e65f7a3b980edb88098
   },
   {
    "attachments": {},
@@ -1152,19 +943,12 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
     "import time"
    ]
-=======
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
->>>>>>> 0901e70e25741f3535236e65f7a3b980edb88098
   },
   {
    "attachments": {},
@@ -1178,19 +962,12 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
     "criterion = torch.nn.CrossEntropyLoss()  "
    ]
-=======
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
->>>>>>> 0901e70e25741f3535236e65f7a3b980edb88098
   },
   {
    "attachments": {},
@@ -1205,19 +982,12 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
     "optimizer = torch.optim.Adam(model.parameters(), lr=0.01)  "
    ]
-=======
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
->>>>>>> 0901e70e25741f3535236e65f7a3b980edb88098
   },
   {
    "attachments": {},
@@ -1229,7 +999,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 68,
    "metadata": {},
    "outputs": [],
@@ -1242,12 +1011,6 @@
     "    optimizer.step()  # Update parameters based on gradients.\n",
     "    return loss, h"
    ]
-=======
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
->>>>>>> 0901e70e25741f3535236e65f7a3b980edb88098
   },
   {
    "attachments": {},
@@ -1259,11 +1022,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 69,
-=======
-   "execution_count": null,
->>>>>>> 0901e70e25741f3535236e65f7a3b980edb88098
    "metadata": {},
    "outputs": [
     {
@@ -1677,7 +1436,6 @@
      "output_type": "display_data"
     }
    ],
-<<<<<<< HEAD
    "source": [
     "for epoch in range(401):\n",
     "    loss, h = train(data)\n",
@@ -1685,9 +1443,6 @@
     "        visualize_embedding(h, color=data.y, epoch=epoch, loss=loss)\n",
     "        time.sleep(0.3)"
    ]
-=======
-   "source": []
->>>>>>> 0901e70e25741f3535236e65f7a3b980edb88098
   },
   {
    "attachments": {},
